RESOLVED FIXED135099
REGRESSION (r171057): Crash in WebPage::getPositionInformation() when tapping an imagemap
https://bugs.webkit.org/show_bug.cgi?id=135099
Summary REGRESSION (r171057): Crash in WebPage::getPositionInformation() when tapping...
mitz
Reported 2014-07-20 00:11:45 PDT
Attachments
Add a null check (1.66 KB, patch)
2014-07-20 00:15 PDT, mitz
ddkilzer: review+
mitz
Comment 1 2014-07-20 00:15:35 PDT
Created attachment 235180 [details] Add a null check
mitz
Comment 2 2014-07-20 00:22:01 PDT
David Kilzer (:ddkilzer)
Comment 3 2014-07-20 03:17:24 PDT
Comment on attachment 235180 [details] Add a null check r=me
mitz
Comment 4 2014-07-20 09:51:05 PDT
Note You need to log in before you can comment on or make changes to this bug.