<rdar://problem/17739804> REGRESSION (r171057): Crash in WebPage::getPositionInformation() https://bugs.webkit.org/show_bug.cgi?id=135099

Reviewed by David Kilzer.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation): Added a null check.



Canonical link: https://commits.webkit.org/152998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171280 268f45cc-cd09-0410-ab3c-d52691b4dbfc